--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ plugins {
 
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "0.1"
+version = "1.0.0"
 group = "de.bloodworkxgaming.bloodylib" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "bloodylib"
 
@@ -29,6 +29,9 @@ minecraft {
     mappings = "snapshot_20180708"
     useDepAts = true
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+
+    replace "@VERSION@", "$version"
+    replaceIn "BloodyLib.kt"
 }
 
 repositories {
