--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ plugins {
 }
 
 apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'java'
 
 version = "1.0.0"
 group = "de.bloodworkxgaming.bloodylib" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
